setting up git setup script

--- a/workstation/tasks/main.yml
+++ b/workstation/tasks/main.yml
@@ -14,17 +14,10 @@
 # - include: mysql.yml
 # - include: ruby.yml
 
+#- include: git_ssh.yml
 
-- name: Install ancillary applications
-  homebrew_cask: name={{ item }} state=present
-  with_items:
-      - alfred
-      - firefox
-      - google-chrome
-      - virtualbox
-      - textmate
-      - pycharm
-
+# - name: clone the repo
+#   git: repo=git@github.com:nargetdev/dotfiles.git dest=~/config/dotfiles clone=yes accept_hostkey=true
 
 - name: Install required software
   homebrew: name={{ item }} state=present
@@ -32,8 +25,87 @@
     - ack
     - git
     - vim
+    - zsh
+    - wget
+    - macvim
     - bats
     - leiningen
+
+#- name: get sum macvim
+#  shell: brew install macvim
+
+- name: Get brew-cask and NEOVIM
+  shell: "{{ item }}"
+  with_items:
+    - brew install caskroom/cask/brew-cask
+    - brew tap caskroom/versions
+    - brew tap neovim/homebrew-neovim
+    - brew install --HEAD neovim
+
+# - name: brew tap some NEOVIM yeeeaaa
+#   homebrew_tap: tap=neovim/homebrew-neovim state=present
+# - name: sh some NEOVIM
+#   shell: brew tap neovim/homebrew-neovim
+
+- name: Install ancillary applications
+  homebrew_cask: name={{ item }} state=present
+  with_items:
+      - firefox
+      - google-chrome
+      - pycharm
+      - atom
+      - sublime-text3
+      - adobe-creative-cloud
+      - iterm2
+
+- name: symlink sublime
+  sudo: yes
+  shell: if [ -f /opt/homebrew-cask/Caskroom/sublime-text3 ]; then ln -s /opt/homebrew-cask/Caskroom/sublime-text3 /bin/subl; fi
+
+
+# - name: Bootstrapping developer environment
+  # hosts: all
+
+  # tasks:
+
+- name: Determining username
+  action: shell whoami
+  register: whoami
+  sudo: False
+
+- name: Installing zsh, vim, git, tmux, etc.
+  homebrew: name={{ item }} state=present
+  with_items:
+  - zsh
+  # - vim-enhanced
+  - git
+  - tmux
+  - htop
+
+- name: Changing the default shell to zsh
+  shell: chsh -s /bin/zsh
+  # action: user shell=/bin/zsh
+                            # user={{whoami.stdout}}
+
+
+#- name: Entering Plugin Nirvana
+#  # hosts: all
+#  sudo: False
+
+  #tasks:
+
+- name: Backing up existing ~/.zshrc
+  action: shell if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
+
+- name: Installing oh-my-zsh (https://github.com/robbyrussell/oh-my-zsh)
+  action: git repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
+
+- name: Creating new ~/.zshrc
+  action: shell cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc
+
+- name: Installing spf13-vim, The Ultimate Vim Distribution (http://vim.spf13.com)
+  action: shell curl http://j.mp/spf13-vim3 -L -o - | sh
+
 
 
 
