got conditional working for passing in parameter via '-e git_global=true'  --  TODO: need to implement conditionals to check whether things like zsh were already installed

--- a/workstation/tasks/git_setup_user.yml
+++ b/workstation/tasks/git_setup_user.yml
@@ -1,4 +1,5 @@
-- name: configure git
+- name: configuring git for Nate Argetsinger - narget@umich.edu
   shell: "{{item}}"
   with_items:
-  - git config --global 
+  - git config --global user.name "Nate Argetsinger"
+  - git config --global user.email narget@umich.edu
