--- a/workstation/tasks/main.yml
+++ b/workstation/tasks/main.yml
@@ -1,126 +1,16 @@
 ---
-- name: Make sure required system directories exist
-  file: name={{ item }} state=directory owner={{ ansible_user_id }}
-  sudo: yes
-  with_items:
-  - /opt/rubies
-
-- name: Make sure required home directories exist
-  file: name={{ item }} state=directory
-  with_items:
-      - '{{ home }}/code'
-
-# - include: redis.yml
-# - include: mysql.yml
-# - include: ruby.yml
-
-#- include: git_ssh.yml
-
-# - name: clone the repo
-#   git: repo=git@github.com:nargetdev/dotfiles.git dest=~/config/dotfiles clone=yes accept_hostkey=true
-
-- name: Install required software
-  homebrew: name={{ item }} state=present
-  with_items:
-    - ack
-    - git
-    - vim
-    - zsh
-    - wget
-    - macvim
-    - bats
-    - leiningen
-
-#- name: get sum macvim
-#  shell: brew install macvim
-
-- name: Get brew-cask and NEOVIM
-  shell: "{{ item }}"
-  with_items:
-    - brew install caskroom/cask/brew-cask
-    - brew tap caskroom/versions
-    - brew tap neovim/homebrew-neovim
-    - brew install --HEAD neovim
-
-# - name: brew tap some NEOVIM yeeeaaa
-#   homebrew_tap: tap=neovim/homebrew-neovim state=present
-# - name: sh some NEOVIM
-#   shell: brew tap neovim/homebrew-neovim
-
-- name: Install ancillary applications
-  homebrew_cask: name={{ item }} state=present
-  with_items:
-      - firefox
-      - google-chrome
-      - pycharm
-      - atom
-      - sublime-text3
-      - adobe-creative-cloud
-      - iterm2
-
-- name: symlink sublime
-  sudo: yes
-  shell: if [ -f /opt/homebrew-cask/Caskroom/sublime-text3 ]; then ln -s /opt/homebrew-cask/Caskroom/sublime-text3 /bin/subl; fi
-
-
-# Set up my git environment if I passed in a var
-# - include: git_setup_user.yml
-- name: will we set up global stuffs for git
-  include: git_setup_user.yml
-  when: git_global
+- name: Are we initializing the whole system?
+  when: sys_init
+  include: sys_init.yml
 
 
 
+- name: get solarized
+  get_url: url=http://ethanschoonover.com/solarized/files/solarized.zip dest=~/config/colors
 
+- name: sanity
+  debug: msg="is it osx?"
 
-# - name: Bootstrapping developer environment
-  # hosts: all
-
-  # tasks:
-
-- name: Determining username
-  action: shell whoami
-  register: whoami
-  sudo: False
-
-- name: Installing zsh, vim, git, tmux, etc.
-  homebrew: name={{ item }} state=present
-  with_items:
-  - zsh
-  # - vim-enhanced
-  - git
-  - tmux
-  - htop
-
-- name: Changing the default shell to zsh
-  shell: chsh -s /bin/zsh
-  # action: user shell=/bin/zsh
-                            # user={{whoami.stdout}}
-
-
-#- name: Entering Plugin Nirvana
-#  # hosts: all
-#  sudo: False
-
-  #tasks:
-
-
-# TODO: set conditionals to ignore stuff I already have.
-- name: Backing up existing ~/.zshrc
-  action: shell if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi
-
-- name: Installing oh-my-zsh (https://github.com/robbyrussell/oh-my-zsh)
-  action: git repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh
-
-- name: Creating new ~/.zshrc
-  action: shell cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc
-
-- name: Installing spf13-vim, The Ultimate Vim Distribution (http://vim.spf13.com)
-  action: shell curl http://j.mp/spf13-vim3 -L -o - | sh
-
-
-
-
-# - include: emacs.yml
-
-# - include: pow.yml
+- name: are we osx?
+  include: osx.yml
+  when: osx
