significant refactoring to 'common' ( utils common to both mac and unix )

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
-- hosts: all
+- hosts: localhost
   roles:
-      - role: workstation
+      - role: common
   vars:
       - home: /Users/{{ ansible_user_id }}
