--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,6 @@
 # running this playbook configures every machine I have access to.
 # I don't run site.yml often.
 
-- include: gui_workstation.yml
-- include: headless_workstation.yml
+- include: workstation.yml
+- include: headless.yml
 - include: micro_nodes.yml # For use with RIOT nodes
