--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,31 +1,18 @@
 ---
-- include: debian.yml
+- include: debian_ancillary.yml
   when: ansible_os_family == "Debian"
 
-- include: darwin.yml
+- include: darwin_ancillary.yml
   when: ansible_os_family == "Darwin"
 
 - name: Installing spf13-vim, The Ultimate Vim Distribution (http://vim.spf13.com)
   shell: curl http://j.mp/spf13-vim3 -L -o - | sh     creates=~/.spf13-vim-3
 
 
-
-# Set up user
-
-- name: configuring git for Nate Argetsinger - narget@umich.edu
-  shell: "{{item}}"
-  with_items:
-  - git config --global user.name "Nate Argetsinger"
-  - git config --global user.email narget@umich.edu
-  - git config --global push.default simple
-
 - name: make the directories I'll get_url into
   file: state=directory path={{ item }}
   with_items:
-    - '~/config/util'
-    - '~/dev'
-
-
+    - '~/environment/util'
 
 
 - name: Determining username
@@ -39,7 +26,6 @@
   shell: chsh -s /bin/zsh
 
 
-
 - name: Backing up existing ~/.zshrc but only if ~/.oh-my-zsh isn't already present
   action: shell if [ ! -d ~/.oh-my-zsh ]; then if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi fi
 
@@ -48,7 +34,7 @@
   action: git repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh update=no
 
 - name: clone the repo
-  git: repo=git@github.com:nargetdev/dotfiles.git dest=~/config/dotfiles clone=yes accept_hostkey=true
+  git: repo=git@github.com:nargetdev/dotfiles.git dest=~/environment/dotfiles clone=yes accept_hostkey=true
 
 - name: set up oh-my-zsh via script
   shell: wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O - | sh
@@ -57,7 +43,7 @@
   shell: cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc    creates=~/.zshrc
 
 - name: set up shell
-  shell: echo "source ~/config/dotfiles/zshrc" >> ~/.zshrc
+  shell: echo "source ~/environment/dotfiles/zshrc" >> ~/.zshrc
 
 
 
@@ -69,20 +55,7 @@
 - name: get some urls solarized
   get_url: url={{ item.url }} dest={{ item.dest }}
   with_items:
-  - { url: 'http://ethanschoonover.com/solarized/files/solarized.zip', dest: '~/config/colors'}
-  # - { url: 'http://www.apptivateapp.com/resources/Apptivate.app.zip', dest: '~/config/util'}
+  - { url: 'http://ethanschoonover.com/solarized/files/solarized.zip', dest: '~/environment/colors'}
+  # - { url: 'http://www.apptivateapp.com/resources/Apptivate.app.zip', dest: '~/environment/util'}
 
-- name: git fonts for powerline
-  action: git dest=~/config/powerline_fonts repo=https://github.com/powerline/fonts.git update=no
-
-- name: In
-  apt: name={{ item }} state=present
-  sudo: true
-  with_items:
-    - wget
-    - leiningen
-    - htop
-  when: ansible_os_family == "Debian"
-
-
-- debug: chsh requires login to take effect
+- debug: NOTE that chsh requires login to take effect
