push submodule thing

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,7 +22,7 @@
 
 
 ##########################################################################################
-###############           Flavor               ###########################################
+###############           Primary:               ###########################################
 ##########################################################################################
 - name: GET MAIN CONFIG
   git: repo=git@github.com:nargetdev/environment.git dest=~/environment clone=yes accept_hostkey=true track_submodules=yes
