simplified somewhat for Mac OS X 'workstation' build.  I would like to modularize to just the command line stuff.. or just the apps.. etc.

--- a/roles/common/tasks/darwin_ancillary.yml
+++ b/roles/common/tasks/darwin_ancillary.yml
@@ -1,48 +1,27 @@
-- debug: msg="hello you've reached darwin"
-##########################################################################################
-###############     Authentication for Git     ###########################################
-##########################################################################################
+- debug: msg="hello you've reached darwin (assumes Homebrew already installed)"
 
-- name: create ssh key
-  command: ssh-keygen -t rsa -C "narget@umich.edu" -f ~/.ssh/id_rsa     creates=~/.ssh/id_rsa
+- pip:
+    name: ipython
 
-- name: pipe key to clipboard MAC
-  shell: cat ~/.ssh/id_rsa.pub | pbcopy
-
-- name: wait to put on github
-  pause: prompt="please go put the pub key in your clipboard on github"
-
-
+- pip:
+    name: jupyter
 
 - name: Install core utilities
   homebrew: name={{ item }} state=present
   with_items:
-    - ack
-    - git
-    - vim
-    - zsh
-    - wget
-    - macvim
-    - bats
-    - leiningen
-    - processing
+#    - ack
+#    - git
+#    - vim
+#    - zsh
+#    - wget
+#    - macvim
+#    - bats
+#    - leiningen
+#    - processing
+#    - htop
+#    - binutils
+    - fish
     - tmux
-    - htop
-    - binutils
-
-- name: Install ancillary applications
-  homebrew_cask: name={{ item }} state=present
-  with_items:
-    - firefox
-    - google-chrome
-    - pycharm
-    - atom
-    - sublime-text3
-    - adobe-creative-cloud
-    - iterm2
-    - codekit
-    - spotify
-
 
 
 - name: Get brew-cask and NEOVIM
@@ -52,3 +31,15 @@
     - brew tap caskroom/versions
     - brew tap neovim/homebrew-neovim
     - brew install --HEAD neovim
+
+- name: Install ancillary applications
+  homebrew_cask: name={{ item }} state=present
+  with_items:
+    - iterm2
+    - google-chrome
+    - pycharm
+    - atom
+    # web
+    - codekit
+####pleasure
+    - spotify
