--- a/RPis/rpi_util_playbook.yaml
+++ b/RPis/rpi_util_playbook.yaml
@@ -22,6 +22,34 @@
   #     sudo apt-get install isc-dhcp-server
   #
 
+  - name: get a dhcp server running
+    apt:
+      name: dnsmasq
+      state: present
+
+  # - name: configure interfaces file for dhcp on ethernet
+  #   blockinfile: |
+  #     dest=/etc/network/interfaces
+  #     block= |
+  #       auto eth0
+  #       iface eth0 inet static
+  #       address 192.168.0.1
+  #       netmask 255.255.255.0
+
+  - name: create and configure dnsmasq config file
+    copy:
+      src: configs/_-etc_-dnsmasq.conf
+      dest: /etc/dnsmasq.conf
+      backup: yes
+  - name: restart networking
+    shell: "{{ item.command }}"
+    with_items:
+      - { command: 'sudo service networking restart' }
+      - { command: 'sudo service dnsmasq restart' }
+
+
+
+
   - name: configure terminal coms
     apt:
       name: picocom
@@ -40,7 +68,6 @@
       - { name: 'xinetd', state: 'present' }
       - { name: 'tftpd', state: 'present' }
       - { name: 'tftp', state: 'present' }
-      - { name: 'tmux', state: 'present' }
 
   - name: INSTALL UTILS - tmux
     apt:
@@ -48,6 +75,11 @@
       state: "{{ item.state }}"
     with_items:
       - { name: 'tmux', state: 'present' }
+      - { name: 'python-setuptools', state: 'present' }
+      - { name: 'python-dev', state: 'present' }
+      - { name: 'python3-dev', state: 'present' }
+      - { name: 'telnet', state: 'present' }
+
   - name: INSTALL UTILS - vncserver
     apt:
       name: "{{ item.name }}"
@@ -62,7 +94,7 @@
       path: "{{ item.path }}"
       state: "{{ item.state }}"
     with_items:
-      - { path: '/etc/dhcp/dhcpd.conf', state: 'directory' }
+      # - { path: '/etc/dhcp/dhcpd.conf', state: 'directory' }
       - { path: '/etc/xinetd.d', state: 'directory' }
       - { path: '/etc/xinetd.d/tftp', state: 'touch' }
 
@@ -81,17 +113,15 @@
     with_items:
       - { command: 'chmod -R 777 /tftpboot' }
       - { command: 'chown -R nobody /tftpboot' }
+      - { command: 'sudo /etc/init.d/xinetd stop' }
+      - { command: 'sudo /etc/init.d/xinetd start' }
 
-  - name: weaved connection
-    command: "{{ item.cmd }}"
-    with_items:
-      - { cmd: 'sudo apt-get update' }
-      - { cmd: 'sudo apt-get install weavedconnectd' }
-      - { cmd: 'sudo weavedinstaller' }
+  # - name: Install RPIO
+  #   easy_install:
+  #     name: RPIO
 
-  - hostname:
-    name: web01
 
+  # - name: getting openocd running on rpi
 
 
 #   - name: RPi camera interface
