--- a/RPis/configs/_-etc_-dnsmasq.conf
+++ b/RPis/configs/_-etc_-dnsmasq.conf
@@ -1,2 +1,7 @@
+# DHCP on eth0
 interface=eth0
-dhcp-range=192.168.0.2,192.168.0.254,255.255.255.0,12h
+dhcp-range=192.168.42.100,192.168.42.254,255.255.255.0,12h
+
+# Enable the TFTP server
+enable-tftp
+tftp-root=/var/lib/tftp
