--- a/brewCask.yml
+++ b/brewCask.yml
@@ -1,6 +1,6 @@
 - hosts: localhost
   connection: local
-  gather_facts: no           
+  gather_facts: no
   become: no
   vars:
     homebrew_taps:
@@ -9,13 +9,19 @@
       - caskroom/cask
       - railwaycat/emacsmacport
       - sanemat/font
+      - greymd/tools
     homebrew_packages:
+      - { name: fish }
+      - { name: tmux-xpanes }
       - { name: zsh }
       - { name: picocom }
+      - { name: jq }
       #- { name: readline }
       #- { name: openssl }
       #- { name: openssl, state: linked, install_options: force }
-      #- { name: python }
+      - { name: python }
+      - { name: neovim }
+      - { name: opencv }
       #- { name: ansible }
       #- { name: git }
       #- { name: zsh, install_options: disable-etcdir }
@@ -33,19 +39,31 @@
       #- { name: rbenv }
       #- { name: ruby-build }
     homebrew_cask_apps:
-      #- { name: firefox }
       - { name: google-chrome }
-      #- { name: adobe-reader }
-      #- { name: java }
+      - { name: java }
       - { name: skype }
-      - { name: slack }
+      # - { name: slack }
       - { name: atom }
-      - { name: caffeine } 
+      - { name: caffeine }
       - { name: alfred }
+      - { name: iterm2 }
+      - { name: nvalt }
+      - { name: processing }
+      - { name: pd }
+      - { name: pd-extended }
+      - { name: gitkraken }
+      - { name: arduino }
+      - { name: spotify }
+      # - { name: fusion360 }
+      - { name: visual-studio-code }
+    new_homebrew_cask_apps:
+      - { name: sublime-text }
+      - { name: clion }
   tasks:
   - debug:
       msg: "System {{ item }}"
     with_items: "{{homebrew_taps}}"
+    when: False
 
   # Tap.
   - name: Ensure configured taps are tapped.
@@ -62,6 +80,7 @@
       install_options: "{{ item.install_options | default(omit) }}"
       state: present
     with_items: "{{ homebrew_packages }}"
+    when: false
 
   # Cask.
   - name: Install configured cask applications.
@@ -70,6 +89,15 @@
       state: present
       install_options: "appdir=/Applications"
     with_items: "{{ homebrew_cask_apps }}"
+    when: false
+
+  - name: NEW CASKS WOOT WOOT!
+    homebrew_cask:
+      name: "{{ item.name }}"
+      state: present
+      install_options: "appdir=/Applications"
+    with_items: "{{ new_homebrew_cask_apps }}"
+    when: True
 
 
 #  — name: tap some stuff
