--- a/workstation.yml
+++ b/workstation.yml
@@ -1,11 +1,12 @@
 - hosts: localhost
-  # vars:
-  #   HOME_PATH: "/mnt/c/Users/narge"
+  vars:
+    HOME_PATH: "{{ ansible_env.HOME }}"
   #   CAREER_PATH: "/mnt/c/Users/narge/DEV/CAREER"
   # become: nateargetsinger
   roles:
+  - meshcandy_firmware_dev
   #- configure_git
-    - configure_mercurial
+  # - configure_mercurial
   # - ansible_developer
   # - console
   # - ansible-role-atom
