--- a/raspberries.yml
+++ b/raspberries.yml
@@ -1,13 +1,13 @@
 - hosts: raspberries
   vars:
-    HOME_PATH: "/mnt/c/Users/narge"
-    CAREER_PATH: "/mnt/c/Users/narge/DEV/CAREER"
+    HOME_PATH: "{{ ansible_env.HOME }}"
   become: yes
   roles:
+  - network_configurator
   #- directories_and_nav
   #- common
   #- gui
   #- ARM_devel
   #- MESHCANDY_DEV
   #- RPi_Meshcandy
-  - RPi_symmetry
+  # - RPi_symmetry
