--- a/rpi_util_playbook.yaml
+++ b/rpi_util_playbook.yaml
@@ -2,7 +2,7 @@
 - name: configure common functionality I expect in my RPi's
   hosts: raspberries
   remote_user: pi
-  sudo: yes
+  become: yes
   vars:
     http_port: 80
     max_clients: 200
