--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,67 +1,11 @@
 ---
-- include: debian_ancillary.yml
-  when: ansible_os_family == "Debian"
-
-- include: darwin_ancillary.yml
-  when: ansible_os_family == "Darwin"
-
-- name: Installing spf13-vim, The Ultimate Vim Distribution (http://vim.spf13.com)
-  shell: curl http://j.mp/spf13-vim3 -L -o - | sh     creates=~/.spf13-vim-3
-
-
-- name: make the directories I'll get_url into
-  file: state=directory path={{ item }}
-  with_items:
-    - '~/environment/util'
-
-
-- name: Determining username
-  action: shell whoami
-  register: whoami
-  sudo: false
-
+# - name: make the directories I'll get_url into
+#   file: state=directory path={{ item }}
+#   with_items:
+#     - '~/environment/util'
 
 ##########################################################################################
 ###############           Primary:               ###########################################
 ##########################################################################################
 - name: GET MAIN CONFIG
   git: repo=git@github.com:nargetdev/environment.git dest=~/environment clone=yes accept_hostkey=true track_submodules=yes
-
-
-
-- name: Changing the default shell to zsh FOR ROOT
-  sudo: true
-  shell: chsh -s /bin/zsh
-
-
-- name: Backing up existing ~/.zshrc but only if ~/.oh-my-zsh isn't already present
-  action: shell if [ ! -d ~/.oh-my-zsh ]; then if [ -f ~/.zshrc ]; then mv ~/.zshrc{,.orig}; fi fi
-
-
-- name: Installing oh-my-zsh (https://github.com/robbyrussell/oh-my-zsh)
-  action: git repo=https://github.com/robbyrussell/oh-my-zsh dest=~/.oh-my-zsh update=no
-
-
-- name: set up oh-my-zsh via script
-  shell: wget https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O - | sh
-
-- name: default oh my zsh
-  shell: cp ~/.oh-my-zsh/templates/zshrc.zsh-template ~/.zshrc    creates=~/.zshrc
-
-- name: set up shell
-  shell: echo "source ~/environment/dotfiles/zshrc" >> ~/.zshrc
-
-
-
-
-##########################################################################################
-###############           Flavor               ###########################################
-##########################################################################################
-
-- name: get some urls solarized
-  get_url: url={{ item.url }} dest={{ item.dest }}
-  with_items:
-  - { url: 'http://ethanschoonover.com/solarized/files/solarized.zip', dest: '~/environment/colors'}
-  # - { url: 'http://www.apptivateapp.com/resources/Apptivate.app.zip', dest: '~/environment/util'}
-
-- debug: NOTE that chsh requires login to take effect
