--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "roles/meshcandy_firmware_dev"]
 	path = roles/meshcandy_firmware_dev
 	url = /Users/nateargetsinger/ansible/roles/meshcandy_firmware_dev
+[submodule "roles/ansible-role-kaneka-dev"]
+	path = roles/ansible-role-kaneka-dev
+	url = git@github.com:KanekaLanguage/ansible-role-kaneka-dev.git
